--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,15 @@ code {
     monospace;
 }
 
-h1{
-  font-size: 50px;
+h1 {
+  font-size: 3rem;
 }
 
 .nav-bar {
   background: #1f1f1f;
   display: flex;
- justify-content: space-between;  /* THIS NEEDS A CHANGE IN REACTIVE SITE */
+  justify-content: center;
+  /* THIS ^^^ NEEDS A CHANGE IN REACTIVE SITE */
   align-items: center;
   box-shadow: 0 1px 10px 0 black;
 }
@@ -29,36 +30,114 @@ h1{
   display: flex;
 }
 
-.nav-items > li {
-  padding: 20px;
+.nav-items>li {
+  padding-right: 50px;
   color: #04748c
-
 }
 
-.nav-items > li:hover {
+.nav-items>li:hover {
   animation: nav-Animation ease 3s;
-  color:white; 
+  color: white;
 }
 
 .logo-img {
-padding-left: 20px;
-padding-top: 15px;
-width: 175px;  
+  padding-left: 20px;
+  padding-top: 15px;
+  width: 175px;
 }
 
 .main-content {
   padding: 10px 10%;
-  justify-content:center;
+  justify-content: center;
   background-image: url(./assets/images/background.jpeg);
   background-size: 100%;
   background-repeat: repeat-y;
   background-color: rgb(133, 50, 50);
-  background-blend-mode:difference;
- 
+  background-blend-mode: difference;
+
 }
 
-.main-content .about-content {
+.team-page {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10%;
+  justify-content: center;
+  height: 100%;
+}
 
+.team-card {
+  position: relative;
+  width: 300px;
+  height: auto;
+  background-color: #23252c2a;
+  border-radius: 20px;
+  margin-bottom: 100px;
+}
+
+.team-card>.img {
+  position: relative;
+  width: 225px;
+  height: 225px;
+  top: 44px;
+  left: 12.5%;
+  background: rgb(115, 115, 115);
+  border-radius: 10px 10px 0px 0px;
+  
+}
+
+.team-card>.info {
+  opacity: 1;
+  position: relative;
+  width: 75%;
+  height: auto;
+  left: 12.5%;
+  margin-top: 38px;
+  margin-bottom: 44px;
+  background-color: #04738c3f;
+  border-radius: 0px 0px 10px 10px;
+  
+}
+
+.team-card>.info>.name {
+  text-align: center;
+  font-size: 25px;
+  margin: 0;
+}
+
+.team-card>.info>.title {
+  margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12.8px;
+  line-height: 15px;
+  text-align: center;
+  color: #F3BF99;
+}
+
+.team-card>.info>.about {
+  text-align: center;
+  font-size: 12px;
+  
+}
+
+.team-card-footer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction:row;
+  justify-content: center;
+  
+
+  background: #161619;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.icons{
+  padding-top: 3px;
+  height: 37px;
+  margin: 6px;
 }
 
 .footer {
