--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,22 @@ h1 {
   font-size: 3rem;
 }
 
+/* NAVBAR */
 .nav-bar {
   background: #1f1f1f;
+  overflow: hidden; 
   display: flex;
   justify-content: center;
-  /* THIS ^^^ NEEDS A CHANGE IN REACTIVE SITE */
   align-items: center;
+  padding: 1vw 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+
+
+  transition: ease-in-out 0.9s;
   box-shadow: 0 1px 10px 0 black;
+  backdrop-filter: blur(5px);
 }
 
 .nav-items {
@@ -32,7 +41,9 @@ h1 {
 
 .nav-items>li {
   padding-right: 50px;
-  color: #04748c
+  color: #04748c;
+
+  transition: ease-in-out 0.9s;
 }
 
 .nav-items>li:hover {
@@ -42,28 +53,31 @@ h1 {
 
 .logo-img {
   padding-left: 20px;
-  padding-top: 15px;
-  width: 175px;
+  padding-top: 10px;
+  width: 150px;
+
+  transition: ease-in-out 0.9s;
 }
 
+/* MAIN PAGE */
 .main-content {
-  padding: 10px 10%;
+  padding: 7vw 10%;
   justify-content: center;
-  background-image: url(./assets/images/background.jpeg);
-  background-size: 100%;
-  background-repeat: repeat-y;
-  background-color: rgb(133, 50, 50);
-  background-blend-mode: difference;
-
+  background-image: url(./assets/images/background.jpeg) ;
+  background-blend-mode:color-burn;
+  background-color:  #607175;
+  background-repeat: repeat;
 }
 
+/* TEAM SECTION */
 .team-page {
   display: inline-flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 10%;
+  gap: 6%;
   justify-content: center;
   height: 100%;
+  filter:blur(0px);
 }
 
 .team-card {
@@ -73,6 +87,16 @@ h1 {
   background-color: #23252c2a;
   border-radius: 20px;
   margin-bottom: 100px;
+
+  transition: ease-in-out 0.7s;
+}
+
+.team-card:hover{
+  transform: scale(1.05) translateZ(0);
+}
+
+.team-page:hover .team-card:not(:hover) {
+  filter: brightness(2) saturate(0) contrast(1.5) blur(2px);
 }
 
 .team-card>.img {
@@ -83,7 +107,7 @@ h1 {
   left: 12.5%;
   background: rgb(115, 115, 115);
   border-radius: 10px 10px 0px 0px;
-  
+
 }
 
 .team-card>.info {
@@ -96,7 +120,7 @@ h1 {
   margin-bottom: 44px;
   background-color: #04738c3f;
   border-radius: 0px 0px 10px 10px;
-  
+
 }
 
 .team-card>.info>.name {
@@ -119,27 +143,35 @@ h1 {
 .team-card>.info>.about {
   text-align: center;
   font-size: 12px;
-  
+
 }
 
 .team-card-footer {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: center;
-  
+
 
   background: #161619;
   border-radius: 0px 0px 10px 10px;
 }
 
-.icons{
+.icons {
   padding-top: 3px;
   height: 37px;
   margin: 6px;
+
+  transition: 0.4s;
 }
 
+.icons:hover {
+  transform: scale(1.4);
+  transition: 0.4s;
+}
+
+/* FOOTER */
 .footer {
   position: fixed;
   bottom: 0;
@@ -158,5 +190,14 @@ h1 {
     /* background-color: rgba(0, 110, 255, 0.349); */
     transform: scale(1.05);
 
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform: translate3d(0,0,0) ;
+  }
+  100% {
+    transform: translate3d(-1000px, 0,0);
   }
 }
